# pipe

./: CMakeLists.txt  README.md
Source/: EmbeddedScAudioEngine.cpp  EmbeddedScAudioEngine.h  InternalEvent.h  Main.cpp
